using Java 5 string features; minor clean up
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/branches/FedoraGenericSearch2.2/1.4/FedoraGenericSearch2.2/@44541 5c398c58-3d0a-0410-a38c-d0825f6816e0